2010-05-03  Sergio Martin  <sergio.martin@artica.es>

	* operation/agentes/alerts_status.php
	operation/agentes/alerts_status.functions.php: Fixed
	typo fix for bug: 2989944

2010-05-03  Sergio Martin  <sergio.martin@artica.es>

	* operation/events/events.php: Fixed the successfully
	message over the header for bug: 2989965

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* godmode/alerts/alert_list.builder.php: Removed an
	useless combo of old version. Bug: 2993508

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_ui.php: Fixed the access at the
	groups without icon. bug: 2944540 

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* operation/agentes/group_view.php: Fixed the group
	1 problem. It was not showed

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* operation/snmpconsole/snmp_view.php: Improved the
	code using printTruncateText

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* include/functions_ui.php: Improved the printTruncateText
	function adding the parameter showTextInTitle

2010-04-30  Sergio Martin  <sergio.martin@artica.es>

	* operation/snmpconsole/snmp_view.php: Fixed the custom 
	value column tooltip. Now, the tooltip shows the full
	value instead of the custom OID. Bug: 2940432

2010-04-30 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_io.php: added in the function "safe_output" the flag
	$utf8 for set the encoding of output, by default true.

2010-04-29 Miguel de Dios  <miguel.dedios@artica.es>

	* godmode/reporting/reporting_builder.item_editor.php: fixed typo mistake in
	the sla vars in javascript.

2010-04-29 Miguel de Dios  <miguel.dedios@artica.es>

	* include/functions_ui.php: added the function "printTruncateText" for
	facilitate trunc texts, and add the eye candy the tooltip.

	* godmode/reporting/reporting_builder.list_items.php: used the new function
	"printTruncateText".

2010-04-29  Ramon Novoa  <rnovoa@artica.es>
