@@ -1,3 +1,9 @@
+2010-04-30 Miguel de Dios  <miguel.dedios@artica.es>
+
+	* include/functions_reporting.php: added the parameter "$html" in the
+	function "get_module_detailed_event_reporting", this flag is for return
+	the html table or object table, by default the html.
+
 2010-05-03  Sergio Martin  <sergio.martin@artica.es>
 
 	* operation/agentes/alerts_status.php
